--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     </title>
   </head>
   <body>
+    <header>
+      <div class="logo"></div>
+    </header>
     <h1>Bienvenue sur mon site</h1>
   </body>
 </html>
